err/diffport.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/alembic'...
Listing './lib/python3.5/site-packages/alembic/autogenerate'...
Listing './lib/python3.5/site-packages/alembic/ddl'...
Listing './lib/python3.5/site-packages/alembic/operations'...
Listing './lib/python3.5/site-packages/alembic/runtime'...
Listing './lib/python3.5/site-packages/alembic/script'...
Listing './lib/python3.5/site-packages/alembic/templates'...
Listing './lib/python3.5/site-packages/alembic/templates/generic'...
Listing './lib/python3.5/site-packages/alembic/templates/multidb'...
Listing './lib/python3.5/site-packages/alembic/templates/pylons'...
Listing './lib/python3.5/site-packages/alembic/testing'...
Listing './lib/python3.5/site-packages/alembic/testing/plugin'...
Listing './lib/python3.5/site-packages/alembic/util'...
Listing './lib/python3.5/site-packages/alembic-0.9.6.egg-info'...
Listing './lib/python3.5/site-packages/banal'...
Listing './lib/python3.5/site-packages/banal-0.3.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/dataset'...
Listing './lib/python3.5/site-packages/dataset-1.0.5.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/diffport'...
Compiling './lib/python3.5/site-packages/diffport/cli.py'...
***   File "./lib/python3.5/site-packages/diffport/cli.py", line 74
    info(f"Snapshot {saved_hash} saved")
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffport/connection.py'...
***   File "./lib/python3.5/site-packages/diffport/connection.py", line 30
    return f"{dialect}://{c['user']}:{c['password']}@{c['host']}:{c['port']}/{c['dbname']}"
                                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffport/core.py'...
***   File "./lib/python3.5/site-packages/diffport/core.py", line 118
    header += f"> - at {old_time} (*{old_snap_hash}*)\n"
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffport/store.py'...
***   File "./lib/python3.5/site-packages/diffport/store.py", line 72
    with gzip.open(self.path.joinpath(f"{snap['time']}.gz"), "w") as fp:
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffport/watchers.py'...
***   File "./lib/python3.5/site-packages/diffport/watchers.py", line 94
    select_fields = f"{group_fields}, md5({table_config['table']}::text) as hash"
                                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/diffport-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/normality'...
Listing './lib/python3.5/site-packages/normality-0.5.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_editor-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_store_dir.py'...
***   File "./lib/python3.5/site-packages/tests/test_store_dir.py", line 42
    with gzip.open(store_path.joinpath(f"{snap['time']}.gz")) as fp:
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_watchers.py'...
***   File "./lib/python3.5/site-packages/tests/test_watchers.py", line 69
    db.query(f"CREATE TABLE table_basic (id SERIAL PRIMARY KEY, one INTEGER, two INTEGER);")
                                                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
